package com.dtc.core.protobuf;

import com.dtc.api.annotations.NotNull;
import com.dtc.core.protobuf.NetworkMessageProtos.*;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

import javax.inject.Inject;
import javax.inject.Singleton;
import java.util.HashMap;
import java.util.Map;

/**
 * Protobuf æ¶ˆæ¯ä½¿ç”¨ç¤ºä¾‹ æ¼”ç¤ºå¦‚ä½•åˆ›å»ºå’Œä½¿ç”¨å„ç§ç±»å‹çš„ Protobuf æ¶ˆæ¯
 * 
 * @author Network Service Template
 */
@Singleton
public class ProtobufMessageExample {

    private static final Logger log = LoggerFactory.getLogger(ProtobufMessageExample.class);

    private final MessageFactory messageFactory;
    private final ClientMessageHandler clientHandler;
    private final ServerMessageHandler serverHandler;

    @Inject
    public ProtobufMessageExample(@NotNull MessageFactory messageFactory, @NotNull ClientMessageHandler clientHandler,
            @NotNull ServerMessageHandler serverHandler) {
        this.messageFactory = messageFactory;
        this.clientHandler = clientHandler;
        this.serverHandler = serverHandler;
    }

    /**
     * æ¼”ç¤ºå®¢æˆ·ç«¯æ¶ˆæ¯åˆ›å»ºå’Œå‘é€
     */
    public void demonstrateClientMessages() {
        log.info("=== å®¢æˆ·ç«¯æ¶ˆæ¯æ¼”ç¤º ===");

        String clientId = "client-001";
        String serverId = "server-001";

        // 1. å‘é€å¿ƒè·³æ¶ˆæ¯
        Map<String, String> metadata = new HashMap<>();
        metadata.put("version", "1.0");
        metadata.put("platform", "java");

        NetworkMessage heartbeatMessage = clientHandler.sendHeartbeat(clientId, serverId, metadata);
        log.info("å‘é€å¿ƒè·³æ¶ˆæ¯: {}", heartbeatMessage.getMessageId());

        // 2. å‘é€æ–‡æœ¬æ•°æ®æ¶ˆæ¯
        NetworkMessage textMessage = clientHandler.sendTextData(clientId, serverId, "chat", "Hello, Server!", null, 1);
        log.info("å‘é€æ–‡æœ¬æ¶ˆæ¯: {}", textMessage.getMessageId());

        // 3. å‘é€ JSON æ•°æ®æ¶ˆæ¯
        String jsonData = "{\"action\":\"login\",\"username\":\"user123\",\"password\":\"***\"}";
        NetworkMessage jsonMessage = clientHandler.sendJsonData(clientId, serverId, "auth", jsonData, null, 2);
        log.info("å‘é€ JSON æ¶ˆæ¯: {}", jsonMessage.getMessageId());

        // 4. å‘é€ç”¨æˆ·æ¶ˆæ¯
        String[] roles = { "user", "admin" };
        Map<String, String> attributes = new HashMap<>();
        attributes.put("department", "IT");
        attributes.put("location", "Beijing");

        NetworkMessage userMessage = clientHandler.sendUserMessage(clientId, serverId, 1001L, "john_doe",
                "john@example.com", roles, attributes);
        log.info("å‘é€ç”¨æˆ·æ¶ˆæ¯: {}", userMessage.getMessageId());

        // 5. å‘é€è®¢å•æ¶ˆæ¯
        OrderItem[] items = { messageFactory.createOrderItem(1001L, "Product A", 2, 99.99),
                messageFactory.createOrderItem(1002L, "Product B", 1, 149.99) };

        NetworkMessage orderMessage = clientHandler.sendOrderMessage(clientId, serverId, 2001L, 1001L, items, 349.97,
                "pending");
        log.info("å‘é€è®¢å•æ¶ˆæ¯: {}", orderMessage.getMessageId());

        // 6. å‘é€äº§å“æ¶ˆæ¯
        String[] tags = { "electronics", "smartphone", "android" };
        Map<String, String> properties = new HashMap<>();
        properties.put("brand", "Samsung");
        properties.put("model", "Galaxy S21");
        properties.put("color", "Black");

        NetworkMessage productMessage = clientHandler.sendProductMessage(clientId, serverId, 3001L,
                "Samsung Galaxy S21", "Latest smartphone with 5G", 999.99, "Electronics", tags, properties);
        log.info("å‘é€äº§å“æ¶ˆæ¯: {}", productMessage.getMessageId());
    }

    /**
     * æ¼”ç¤ºæœåŠ¡å™¨ç«¯æ¶ˆæ¯å¤„ç†
     */
    public void demonstrateServerMessages() {
        log.info("=== æœåŠ¡å™¨ç«¯æ¶ˆæ¯æ¼”ç¤º ===");

        String clientId = "client-001";
        String serverId = "server-001";

        // 1. å¤„ç†å®¢æˆ·ç«¯è¿æ¥
        serverHandler.handleClientConnect(clientId, serverId);

        // 2. åˆ›å»ºå¹¶å¤„ç†å¿ƒè·³æ¶ˆæ¯
        NetworkMessage heartbeatMessage = messageFactory.createHeartbeatMessage(clientId, serverId, null);
        NetworkMessage heartbeatResponse = serverHandler.handleReceivedMessage(heartbeatMessage);
        if (heartbeatResponse != null) {
            log.info("å¤„ç†å¿ƒè·³æ¶ˆæ¯å“åº”: {}", heartbeatResponse.getMessageId());
        }

        // 3. åˆ›å»ºå¹¶å¤„ç†æ•°æ®æ¶ˆæ¯
        String jsonData = "{\"action\":\"login\",\"username\":\"user123\"}";
        NetworkMessage dataMessage = messageFactory.createJsonDataMessage(clientId, serverId, "auth", jsonData, null,
                1);
        NetworkMessage dataResponse = serverHandler.handleReceivedMessage(dataMessage);
        if (dataResponse != null) {
            log.info("å¤„ç†æ•°æ®æ¶ˆæ¯å“åº”: {}", dataResponse.getMessageId());
        }

        // 4. å¹¿æ’­æ¶ˆæ¯ç»™æ‰€æœ‰å®¢æˆ·ç«¯
        NetworkMessage broadcastMessage = messageFactory.createTextDataMessage(serverId, null, "announcement",
                "Server maintenance in 10 minutes", null, 1);
        serverHandler.broadcastMessage(broadcastMessage);
        log.info("å¹¿æ’­æ¶ˆæ¯: {}", broadcastMessage.getMessageId());

        // 5. å‘é€æ¶ˆæ¯ç»™ç‰¹å®šå®¢æˆ·ç«¯
        NetworkMessage privateMessage = messageFactory.createTextDataMessage(serverId, null, "private",
                "Private message for you", null, 1);
        serverHandler.sendMessageToClient(clientId, privateMessage);
        log.info("å‘é€ç§èŠæ¶ˆæ¯: {}", privateMessage.getMessageId());

        // 6. å¤„ç†å®¢æˆ·ç«¯æ–­å¼€è¿æ¥
        serverHandler.handleClientDisconnect(clientId, serverId);
    }

    /**
     * æ¼”ç¤ºæ¶ˆæ¯åºåˆ—åŒ–å’Œååºåˆ—åŒ–
     */
    public void demonstrateSerialization() {
        log.info("=== æ¶ˆæ¯åºåˆ—åŒ–æ¼”ç¤º ===");

        String clientId = "client-001";
        String serverId = "server-001";

        // 1. åˆ›å»ºæ¶ˆæ¯
        NetworkMessage originalMessage = messageFactory.createTextDataMessage(clientId, serverId, "test",
                "Hello, Protobuf!", null, 1);
        log.info("åŸå§‹æ¶ˆæ¯: {}", originalMessage.getMessageId());

        // 2. åºåˆ—åŒ–æ¶ˆæ¯
        byte[] serializedData = messageFactory.serializeNetworkMessage(originalMessage);
        log.info("åºåˆ—åŒ–åå¤§å°: {} bytes", serializedData.length);

        // 3. ååºåˆ—åŒ–æ¶ˆæ¯
        try {
            NetworkMessage deserializedMessage = messageFactory.parseNetworkMessage(serializedData);
            log.info("ååºåˆ—åŒ–æ¶ˆæ¯: {}", deserializedMessage.getMessageId());

            // 4. éªŒè¯æ¶ˆæ¯å†…å®¹
            if (originalMessage.getMessageId().equals(deserializedMessage.getMessageId())
                    && originalMessage.getType() == deserializedMessage.getType()
                    && originalMessage.getClientId().equals(deserializedMessage.getClientId())) {
                log.info("âœ… æ¶ˆæ¯åºåˆ—åŒ–/ååºåˆ—åŒ–éªŒè¯æˆåŠŸ");
            } else {
                log.error("âŒ æ¶ˆæ¯åºåˆ—åŒ–/ååºåˆ—åŒ–éªŒè¯å¤±è´¥");
            }
        } catch (Exception e) {
            log.error("ååºåˆ—åŒ–å¤±è´¥", e);
        }
    }

    /**
     * æ¼”ç¤ºæ‰¹é‡æ¶ˆæ¯å¤„ç†
     */
    public void demonstrateBatchProcessing() {
        log.info("=== æ‰¹é‡æ¶ˆæ¯å¤„ç†æ¼”ç¤º ===");

        String clientId = "client-001";
        String serverId = "server-001";

        // åˆ›å»ºå¤šä¸ªæ¶ˆæ¯
        NetworkMessage[] messages = new NetworkMessage[5];
        for (int i = 0; i < 5; i++) {
            messages[i] = messageFactory.createTextDataMessage(clientId, serverId, "batch", "Batch message " + (i + 1),
                    null, 1);
        }

        // æ‰¹é‡åºåˆ—åŒ–
        byte[][] serializedMessages = new byte[messages.length][];
        for (int i = 0; i < messages.length; i++) {
            serializedMessages[i] = messageFactory.serializeNetworkMessage(messages[i]);
        }

        log.info("æ‰¹é‡åºåˆ—åŒ–å®Œæˆï¼Œå…± {} æ¡æ¶ˆæ¯", messages.length);

        // æ‰¹é‡ååºåˆ—åŒ–
        try {
            for (int i = 0; i < serializedMessages.length; i++) {
                NetworkMessage deserializedMessage = messageFactory.parseNetworkMessage(serializedMessages[i]);
                log.debug("ååºåˆ—åŒ–æ¶ˆæ¯ {}: {}", i + 1, deserializedMessage.getMessageId());
            }
            log.info("âœ… æ‰¹é‡ååºåˆ—åŒ–å®Œæˆ");
        } catch (Exception e) {
            log.error("æ‰¹é‡ååºåˆ—åŒ–å¤±è´¥", e);
        }
    }

    /**
     * æ¼”ç¤ºé”™è¯¯å¤„ç†
     */
    public void demonstrateErrorHandling() {
        log.info("=== é”™è¯¯å¤„ç†æ¼”ç¤º ===");

        String clientId = "client-001";
        String serverId = "server-001";

        // 1. åˆ›å»ºé”™è¯¯æ¶ˆæ¯
        NetworkMessage errorMessage = messageFactory.createErrorMessage(clientId, serverId, 500,
                "Internal server error", "Database connection failed", "java.sql.SQLException: Connection timeout");
        log.info("åˆ›å»ºé”™è¯¯æ¶ˆæ¯: {}", errorMessage.getMessageId());

        // 2. å¤„ç†é”™è¯¯æ¶ˆæ¯
        serverHandler.handleReceivedMessage(errorMessage);

        // 3. åˆ›å»ºå…³é—­æ¶ˆæ¯
        NetworkMessage closeMessage = messageFactory.createCloseMessage(clientId, serverId, 1000, "Normal closure",
                true);
        log.info("åˆ›å»ºå…³é—­æ¶ˆæ¯: {}", closeMessage.getMessageId());

        // 4. å¤„ç†å…³é—­æ¶ˆæ¯
        serverHandler.handleReceivedMessage(closeMessage);
    }

    /**
     * è¿è¡Œæ‰€æœ‰æ¼”ç¤º
     */
    public void runAllDemonstrations() {
        log.info("ğŸš€ å¼€å§‹ Protobuf æ¶ˆæ¯æ¼”ç¤º");

        try {
            demonstrateClientMessages();
            demonstrateServerMessages();
            demonstrateSerialization();
            demonstrateBatchProcessing();
            demonstrateErrorHandling();

            log.info("âœ… æ‰€æœ‰æ¼”ç¤ºå®Œæˆ");

            // è¾“å‡ºç»Ÿè®¡ä¿¡æ¯
            log.info("å®¢æˆ·ç«¯ç»Ÿè®¡: {}", clientHandler.getStats());
            log.info("æœåŠ¡å™¨ç»Ÿè®¡: {}", serverHandler.getStats());

        } catch (Exception e) {
            log.error("æ¼”ç¤ºè¿‡ç¨‹ä¸­å‘ç”Ÿé”™è¯¯", e);
        }
    }
}
